--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.111"
 clap = { version = "4.4.18", features = ["derive"] }
 async_once = "0.2.6"
+async-trait = "0.1.77"
 
 [build-dependencies]
 cc = "1.0.79"
